0028035: Visualization - V3d_Trihedron::compute() endlessly creates new graphic groups

V3d_Trihedron::compute() now reuses existing groups in the structure
and resets the flag myToCompute.